Criando janela faturamento e adicionando motos ao fluxo de estacionamento